Undo: texture paint redo crashes #61172

Closed
opened 2019-02-04 09:42:27 +01:00 by Campbell Barton · 3 comments

Undo/Redo texture paint crashes when used w/ global undo, the following test case crashes.

Add this to the end of lib/tests/ui_simulate/test_undo.py

def view3d_texture_paint_redo_crash():
    import bpy
    e, t, window = _test_vars()
    yield from _view3d_startup(e)

    yield e.shift.a().m().m()           # Add monkey.
    yield e.numpad_period()             # View onkey
    yield e.ctrl.tab().t()              # Paint via pie menu.
    yield from _call_by_name(e, "Add Texture Paint Slot")
    yield e.ret()                       # Accept popup.

    yield from e.leftmouse.cursor_motion(_cursor_motion_data_x(window))
    yield e.ctrl.z()
    yield e.ctrl.z()
    t.assertEqual(window.view_layer.objects.active.mode, 'TEXTURE_PAINT')
    yield e.ctrl.z()                    # Used to crash: T61048
    t.assertEqual(e.window.view_layer.objects.active.mode, 'OBJECT')
    # Redo: 'Texture paint toggle'
    while window.view_layer.objects.active.mode != 'TEXTURE_PAINT':
        yield e.ctrl.shift.z()
    t.assertEqual(window.view_layer.objects.active.mode, 'TEXTURE_PAINT')
    yield from e.leftmouse.cursor_motion(_cursor_motion_data_x(window))
    yield e.ctrl.z()                    # Causes crash

Run: ../lib/tests/ui_simulate/run.py --blender=./blender.bin --test 'test_undo.view3d_texture_paint_crash' --keep-open


Gives the following error err.log

Undo/Redo texture paint crashes when used w/ global undo, the following test case crashes. Add this to the end of `lib/tests/ui_simulate/test_undo.py` ``` def view3d_texture_paint_redo_crash(): import bpy e, t, window = _test_vars() yield from _view3d_startup(e) yield e.shift.a().m().m() # Add monkey. yield e.numpad_period() # View onkey yield e.ctrl.tab().t() # Paint via pie menu. yield from _call_by_name(e, "Add Texture Paint Slot") yield e.ret() # Accept popup. yield from e.leftmouse.cursor_motion(_cursor_motion_data_x(window)) yield e.ctrl.z() yield e.ctrl.z() t.assertEqual(window.view_layer.objects.active.mode, 'TEXTURE_PAINT') yield e.ctrl.z() # Used to crash: T61048 t.assertEqual(e.window.view_layer.objects.active.mode, 'OBJECT') # Redo: 'Texture paint toggle' while window.view_layer.objects.active.mode != 'TEXTURE_PAINT': yield e.ctrl.shift.z() t.assertEqual(window.view_layer.objects.active.mode, 'TEXTURE_PAINT') yield from e.leftmouse.cursor_motion(_cursor_motion_data_x(window)) yield e.ctrl.z() # Causes crash ``` Run: `../lib/tests/ui_simulate/run.py --blender=./blender.bin --test 'test_undo.view3d_texture_paint_crash' --keep-open ` ---- Gives the following error [err.log](https://archive.blender.org/developer/F6504035/err.log)
Campbell Barton self-assigned this 2019-02-04 09:42:27 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 87aa456ea5

This issue was referenced by 87aa456ea516f49c6029cf30f8f0dff16cbb58bc
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61172
No description provided.