Fix T61172: Crash in texture paint undo/redo

Mixing texture paint undo w/ memfile undo was crashing.

The gputextures and render result are written to the FileData.imamap
but weren't read back.